# fuzzy5e

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  OGL-1.0a.txt  README.md  config.cfg  docker-compose.yml  fuzzy5e
index/: meta.json
src/: client.rs  db.rs  index.rs  main.rs  model.rs  print.rs  tantivy.rs  worker.rs
