[package]
name = "fuzzy5e"
version = "0.1.0"
authors = ["Casey Chance <casey@chance.email>"]
edition = "2018"

[dependencies]
mongodb = "0.9.2"
bson = "0.14.0"
serde_json = "1.0.0"
structopt = "0.3"
# tuikit = "0.3.2"
tuikit = { git="https://github.com/cachance7/tuikit" }
derivative = "*"
log = "^0.4.0"
pretty_env_logger = "0.4"
simplelog = "^0.7.4"
unicode-linebreak = "*"
quick-error = "*"
ordinal = "0.2"
envconfig = "*"
envconfig_derive = "*"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
